Change package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesome-book-change",
+  "name": "awesome-Book",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mstanley-me/awesome-book-change.git"
+    "url": "git+https://github.com/mstanley-me/awesome-Book.git"
   },
   "keywords": [],
   "author": "Stanley SIMEON",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mstanley-me/awesome-book-change/issues"
+    "url": "https://github.com/mstanley-me/awesome-Book/issues"
   },
-  "homepage": "https://github.com/mstanley-me/awesome-book-change#readme",
+  "homepage": "https://github.com/mstanley-me/awesome-Book#readme",
   "dependencies": {
     "luxon": "^2.3.0",
     "three": "^0.137.5"
